--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
 	"files.associations": {
-		"wait.h": "c"
+		"wait.h": "c",
+		"semaphore.h": "c",
+		"fcntl.h": "c",
+		"philosophers_bonus.h": "c"
 	}
 }
