--- a/philo/Makefile
+++ b/philo/Makefile
@@ -17,6 +17,19 @@ $(NAME): $(OBJS)
 
 all: $(NAME)
 
+asan: $(OBJS)
+	$(CC) $(CFLAGS) -fsanitize=address $(OBJS) -o $(NAME)
+	./$(NAME) 4 410 200 200 10
+
+tsan: $(OBJS)
+	$(CC) $(CFLAGS) -fsanitize=thread  $(OBJS) -o $(NAME)
+	./$(NAME) 4 410 200 200 10
+
+valgrind: $(OBJS)
+	$(CC) $(CFLAGS) $(OBJS) -o $(NAME)
+	valgrind --tool=drd ./$(NAME) 4 410 200 200 5
+
+
 clean:
 	rm -rf $(OBJS)
 
@@ -25,4 +38,4 @@ fclean: clean
 
 re: fclean all
 
-.PHONY: all clean fclean re
+.PHONY: all clean fclean re valgrind
