--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -1,4 +1,4 @@
-BONUS_NAME	=	philo
+BONUS_NAME	=	philo_bonus
 
 BONUS_FILES	=	error_bonus.c fill_stats_bonus.c ft_atoi_bonus.c \
 				philo_bonus.c philo_process_bonus.c time_bonus.c \
