--- a/philo_bonus/Makefile
+++ b/philo_bonus/Makefile
@@ -2,7 +2,7 @@ BONUS_NAME	=	philo_bonus
 
 BONUS_FILES	=	error_bonus.c fill_stats_bonus.c ft_atoi_bonus.c \
 				philo_bonus.c philo_process_bonus.c time_bonus.c \
-				ft_itoa_bonus.c ft_strjoin_bonus.c
+				ft_itoa_bonus.c ft_strjoin_bonus.c routine_bonus.c
 
 BONUS_SRCS	=	$(BONUS_FILES)
 BONUS_OBJS	=	$(BONUS_SRCS:.c=.o)
